--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "foundation-sites": "^6.6.3",
     "jquery": ">=3.6.0",
     "motion-ui": "^2.0.3",
-    "sass": "^1.86.0",
     "what-input": ">=5.2.10"
   },
   "devDependencies": {
@@ -27,8 +26,9 @@
     "gulp": "^4.0.0",
     "gulp-load-plugins": "^2.0.7",
     "gulp-postcss": "^9.0.1",
-    "gulp-sass": "^4.1.1",
-    "postcss": "^8.3.11"
+    "gulp-sass": "^5.1.0",
+    "postcss": "^8.3.11",
+    "sass": "^1.92.0"
   },
   "repository": {
     "type": "git",
